--- a/zprava.tex
+++ b/zprava.tex
@@ -118,6 +118,52 @@ Počet CPU & A & B & C\\
 \end{tabular} 
 \end{figure}
 
+\begin{figure}
+ \caption{Zrychlení Propojovací síť InfiBand}
+\begin{tabular}{|r|r|r|r|}
+\hline
+Počet CPU & A & B & C\\
+\hline
+1 & 1 & 1 & 1\\
+\hline
+2 & 8,26 & 9,00 & 8,99\\
+\hline
+4 & 26,38 & 25,61 & 16,99\\
+\hline
+8 & 45,06 & 30,58 & 24,05\\
+\hline
+16 & 49,09 & 35,45 & 31,66\\
+\hline
+24 & 51,79 & 44,66 & 40,89\\
+\hline
+32 & 51,56 & 44,69 & 42,99\\
+\hline
+\end{tabular} 
+\end{figure}
+
+\begin{figure}
+ \caption{Zrychlení Propojovací síť Ethernet}
+\begin{tabular}{|r|r|r|r|}
+\hline
+Počet CPU & A & B & C\\
+\hline
+1 & 1 & 1 & 1\\
+\hline
+2 & 8,15 & 8,78 & 8,99\\
+\hline
+4 & 24,40 & 24,84 & 16,55\\
+\hline
+8 & 41,18 & 29,26 & 23,92\\
+\hline
+16 & 42,81 & 35,45 & 31,66\\
+\hline
+24 & 45,03 & 42,86 & 37,77\\
+\hline
+32 & 46,48 & 42,32 & 38,55\\
+\hline
+\end{tabular} 
+\end{figure}
+
 \section{Závěr}
 Zhodnocení
 
