--- a/zprava.tex
+++ b/zprava.tex
@@ -211,7 +211,10 @@ Počet CPU & A & B & C\\
 \end{figure}
 
 \section{Závěr}
-
+Měřením jsme ověřili existenci zrychlení při použití paralelizace sekvenčního řešení problému, které
+závisí na počtu použitých procesorů.
+Při implementaci jsme se seznámili se základními funkcemi a vlastnostmi knihovny pro synchronizaci paralelních algoritmů
+pracující na bázi tzv Message Passing. Konkrétně se jednalo se o velmi rozšířenou knihovnu OpenMPI.
 
 \section{Literatura}
 \begin{enumerate}
