--- a/zprava.tex
+++ b/zprava.tex
@@ -216,6 +216,8 @@ závisí na počtu použitých procesorů.
 Při implementaci jsme se seznámili se základními funkcemi a vlastnostmi knihovny pro synchronizaci paralelních algoritmů
 pracující na bázi tzv Message Passing. Konkrétně se jednalo se o velmi rozšířenou knihovnu OpenMPI.
 
+Vzhledem ke vzrůstajícímu významu paralelizace a distribuovaných výpočtů v oblasti informačních technologií
+pro nás bylo seznámení se s paralelním programováním velmi důležité a práce s OpenMPI přínosná.
 \section{Literatura}
 \begin{enumerate}
 \item \href{https://edux.fit.cvut.cz/courses/MI-PAR/labs/prohledavani_do_hloubky}{Stránky cvičení - prohledávání do hloubky}
