--- a/zprava.tex
+++ b/zprava.tex
@@ -277,4 +277,21 @@ pro nás bylo seznámení se s paralelním programováním velmi důležité a p
 \end{center}
 \end{figure}
 
+\section{Grafy zrychlení}
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=8cm]{grafy-zprava/zrychleniinf.png}
+\caption{Zrychlení Infiniband}
+\label{fig:zrychleniinf}
+\end{center}
+\end{figure}
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=8cm]{grafy-zprava/zrychlenieth.png}
+\caption{Zrychlení Ethernet}
+\label{fig:zrychlenieth}
+\end{center}
+\end{figure}
+
 \end{document}
